bynkc/tests/fixtures/negative/487_messages_malformed_icu_missing_other/src/bundle.bynk
commons bundle

uses bynk.locale

messages "en" @reference {
  "cart.count" => "You have {n, plural, one {# item}}"
}
